--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
   "license": "MIT",
   "require": {
     "php": "^8.2",
+    "deeplcom/deepl-php": "^1.10",
+    "google/apiclient": "*",
     "laravel/framework": "^11.0",
     "laravel/jetstream": "^5.3",
     "laravel/sanctum": "^4.0",
     "laravel/tinker": "^2.9",
-    "livewire/livewire": "^3.0"
+    "livewire/livewire": "^3.0",
+    "spatie/laravel-google-calendar": "^3.8"
   },
   "require-dev": {
     "fakerphp/faker": "^1.23",
