--- a/package.json
+++ b/package.json
@@ -82,11 +82,18 @@
         ]
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
+        "@fullcalendar/list": "^6.1.15",
+        "@fullcalendar/multimonth": "^6.1.15",
+        "@fullcalendar/rrule": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15",
         "@popperjs/core": "2.11.8",
         "apexcharts-clevision": "3.28.5",
         "bootstrap": "5.3.3",
         "highlight.js": "11.9.0",
-        "jquery": "3.7.1",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "1.0.5",
         "masonry-layout": "4.2.2",
         "node-waves": "0.7.6",
