--- a/.env
+++ b/.env
@@ -62,3 +62,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+DEEPL_AUTH_KEY="afc60876-a89b-47b5-9dca-a78d21ccd119:fx"
