--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "sass": "1.76.0",
         "sass-loader": "14.0.0",
         "tailwindcss": "^3.4.0",
-        "vite": "5.4.2"
+        "vite": "^5.4.2"
     },
     "overrides": {
         "prop-types": "15.8.1",
