--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     "laravel/sanctum": "^4.0",
     "laravel/tinker": "^2.9",
     "livewire/livewire": "^3.0",
-    "spatie/laravel-google-calendar": "^3.8"
+    "spatie/laravel-google-calendar": "^3.8",
+    "symfony/mailer": "^7.1",
+    "symfony/mailer-send-mailer": "^7.1"
   },
   "require-dev": {
     "fakerphp/faker": "^1.23",
