--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /public/hot
 /storage/*.key
 /vendor
-
+.vercel
 # .env
 .env.backup
 .env.production
@@ -25,3 +25,5 @@ yarn-error.log
 !/public/assets/*
 /public/css
 /public/js
+
+.vercel
