--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "browser-sync": "2.29.3",
     "cross-env": "7.0.3",
     "glob": "10.4.5",
-    "laravel-echo": "^2.0.0",
     "lodash": "4.17.21",
     "postcss": "^8.4.32",
     "prettier": "3.2.5",
     "prop-types": "15.8.1",
-    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resolve-url-loader": "5.0.0",
@@ -94,7 +92,6 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
-    "@popperjs/core": "2.11.8",
     "apexcharts-clevision": "3.28.5",
     "bootstrap": "^5.3.3",
     "build": "^0.1.4",
@@ -104,11 +101,8 @@
     "laravel-vite-plugin": "1.0.5",
     "masonry-layout": "4.2.2",
     "node-waves": "0.7.6",
-    "npm": "^11.1.0",
     "perfect-scrollbar": "1.5.5",
     "remixicon": "4.3.0",
-    "run": "^1.5.0",
-    "select2-bootstrap-5-theme": "^1.3.0",
-    "vercel-php": "^0.7.3"
+    "run": "^1.5.0"
   }
 }
