--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@
 /storage/*.key
 /vendor
 .vercel
-# .env
+.env
 .env.backup
 .env.production
 .phpunit.result.cache
+laravel
 
 docker-compose.override.yml
 
